spacing fix

--- a/css/cssstyle.css
+++ b/css/cssstyle.css
@@ -49,7 +49,7 @@ font-family:ello;
 
 p, li {
   font-size: 1.6rem;
-  line-height: 1.5em;
+  line-height: 2.5em;
 }
 
 p
@@ -74,6 +74,7 @@ padding-left: 50px;
 padding-right: 50px;
 text-align: center;
 min-width: 40%;
+
 
 }
 
@@ -201,6 +202,7 @@ border: none;
 text-decoration: none;
 color: black;
 font-size: 2em;
+margin: 0px 5px 5px 0px ;
 }
 
 div input
